# claudedeep

./: .dockerignore  .env.example  .gitignore  Dockerfile  _log.py  coding.py  deep_research.py  docker-compose.yml  mcp_server.py  prompts.py  pyproject.toml  requirements-web.txt  requirements.txt  run_ab.py  run_evals.py  stats.py  test_coding.py  test_deep_research.py  test_prompts_pdf_ab.py  test_research_loop.py  test_stats_and_evals.py  web.py
.github/workflows/: test.yml
configs/: flash-only.json  flash-pro.json
evals/: golden.jsonl
prompts/v1/: force_synthesis.md  json_schema.md  judge.md  system.md  writer_nudge.md
